# cosmos

./: CMakeLists.txt  README.md  main.c
src/: asprintf.h  instructionParser.c  instructionParser.h  types.h
src/assembler/: assembler.c
src/disassembler/: disassembler.c  disassembler.h
src/emulator/: cpu.c  cpu.h  cpu_opcodes.c  emulator.c  emulator.h
